--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "use-interpolate",
-    "description": "A hook that interpolates html(text) into a component.",
+    "description": "A react hook that interpolates html(text) into a component.",
     "version": "0.0.0",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -37,8 +37,6 @@
         "typescript": "^3.4.3"
     },
     "dependencies": {
-        "@skt-t1-byungi/array-includes": "^0.1.1",
-        "html-tags": "^3.0.0",
         "tag-name-parser": "^1.0.1"
     },
     "peerDependencies": {
