--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
         "lib"
     ],
     "devDependencies": {
-        "@types/node": "^11.13.4",
+        "@types/node": "^12.0.2",
         "@types/react": "^16.8.13",
         "ava": "^1.4.1",
         "browser-env": "^3.2.6",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-hooks-testing-library": "^0.4.1",
+        "react-hooks-testing-library": "^0.5.0",
+        "react-test-renderer": "^16.8.6",
         "ts-node": "^8.1.0",
         "tslint": "^5.16.0",
         "tslint-config-byungi": "^0.1.1",
