--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "use-interpolate",
-    "description": "A react hook that interpolates tag into a component.",
+    "description": "A react hook that interpolates tag to a component.",
     "version": "0.2.1",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -25,18 +25,18 @@
         "lib"
     ],
     "devDependencies": {
+        "@testing-library/react-hooks": "^1.1.0",
         "@types/node": "^12.0.2",
-        "@types/react": "^16.8.13",
-        "ava": "^1.4.1",
+        "@types/react": "^16.8.23",
+        "ava": "^2.2.0",
         "browser-env": "^3.2.6",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-hooks-testing-library": "^0.5.0",
         "react-test-renderer": "^16.8.6",
-        "ts-node": "^8.1.0",
-        "tslint": "^5.16.0",
+        "ts-node": "^8.3.0",
+        "tslint": "^5.18.0",
         "tslint-config-byungi": "^0.1.1",
-        "typescript": "^3.4.3"
+        "typescript": "^3.5.3"
     },
     "dependencies": {
         "tag-name-parser": "^1.0.1"
