--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
         "@types/react": "^16.8.23",
         "ava": "^2.2.0",
         "browser-env": "^3.2.6",
+        "eslint": "^6.8.0",
+        "eslint-config-byungi": "^0.10.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-test-renderer": "^16.8.6",
         "ts-node": "^8.3.0",
-        "tslint": "^5.18.0",
-        "tslint-config-byungi": "^0.1.1",
         "typescript": "^3.5.3"
     },
     "dependencies": {
@@ -52,5 +52,8 @@
         "require": [
             "ts-node/register"
         ]
+    },
+    "eslintConfig": {
+        "extends": "byungi/typescript"
     }
 }
