--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "repository": "https://github.com/skt-t1-byungi/use-interpolate.git",
     "author": "skt-t1-byungi <tiniwz@gmail.com>",
     "scripts": {
-        "test": "ava",
+        "test": "jest",
         "clean": "rm -rf lib",
         "build": "npm run clean && tsc",
         "prepublishOnly": "npm run test && npm run build"
@@ -25,30 +25,20 @@
         "lib"
     ],
     "devDependencies": {
-        "@testing-library/react-hooks": "^1.1.0",
-        "@types/node": "^12.0.2",
-        "@types/react": "^16.8.23",
-        "ava": "^2.2.0",
-        "browser-env": "^3.2.6",
+        "@testing-library/react-hooks": "^3.2.1",
+        "@types/jest": "^25.2.1",
+        "@types/react": "^16.9.34",
         "eslint": "^6.8.0",
         "eslint-config-byungi": "^0.10.4",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-test-renderer": "^16.8.6",
-        "ts-node": "^8.3.0",
+        "jest": "^25.3.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-test-renderer": "^16.13.1",
+        "ts-jest": "^25.3.1",
         "typescript": "^3.5.3"
     },
     "peerDependencies": {
         "react": "^16.8.6"
-    },
-    "ava": {
-        "compileEnhancements": false,
-        "extensions": [
-            "tsx"
-        ],
-        "require": [
-            "ts-node/register"
-        ]
     },
     "eslintConfig": {
         "extends": "byungi/typescript"
