--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "test": "jest",
         "clean": "rm -rf dist",
-        "build": "npm run clean && tsc",
+        "build": "npm run clean && tsc -p tsconfig.prod.json",
         "prepublishOnly": "npm run test && npm run build"
     },
     "keywords": [
@@ -27,15 +27,15 @@
     ],
     "devDependencies": {
         "@testing-library/react-hooks": "^3.2.1",
-        "@types/jest": "^25.2.1",
+        "@types/jest": "^26.0.8",
         "@types/react": "^16.9.34",
-        "eslint": "^6.8.0",
-        "eslint-config-byungi": "^0.10.4",
-        "jest": "^25.3.0",
+        "eslint": "^7.5.0",
+        "eslint-config-byungi": "^0.12.4",
+        "jest": "^26.2.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-test-renderer": "^16.13.1",
-        "ts-jest": "^25.3.1",
+        "ts-jest": "^26.1.4",
         "typescript": "^3.5.3"
     },
     "peerDependencies": {
